# apolo-11

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  reports.pbix  setup.py
apolo-11/Archivos/devices/: APLCLNM000012.yaml  APLCLNM000017.yaml  APLCLNM000018.yaml  APLCLNM00002.yaml  APLCLNM00003.yaml  APLCLNM000039.yaml  APLCLNM000041.yaml  APLCLNM000048.yaml  APLCLNM00005.yaml  APLCLNM00006.yaml  APLCLNM00007.yaml  APLCLNM00008.yaml  APLGALAXONE00001.yaml  APLGALAXONE000011.yaml  APLGALAXONE000015.yaml  APLGALAXONE000016.yaml  APLGALAXONE000017.yaml  APLGALAXONE000018.yaml  APLGALAXONE000027.yaml  APLGALAXONE000033.yaml  APLGALAXONE000036.yaml  APLGALAXONE000037.yaml  APLGALAXONE00004.yaml  APLGALAXONE000043.yaml  APLGALAXONE000044.yaml  APLGALAXONE00006.yaml  APLGALAXONE00009.yaml  APLORBONE00001.yaml  APLORBONE000010.yaml  APLORBONE000013.yaml  APLORBONE000014.yaml  APLORBONE000015.yaml  APLORBONE000019.yaml  APLORBONE00002.yaml  APLORBONE000038.yaml  APLORBONE000046.yaml  APLORBONE000047.yaml  APLORBONE00005.yaml  APLORBONE000050.yaml  APLORBONE00009.yaml  (+37 more)
apolo-11/archivos_pruebas/: navidad.py  pruebas-apolo-original.py  pruebas-apolo.py
apolo-11/python/metadata/: Directory.py
apolo11/archivos_pruebas/: pruebas-apolo-original.py
apolo11/python/classes/: classes.py
apolo11/python/metadata/: Directory.py
apolo11/python/utils/: Utils.py  parameters.py
input/: configuration.yaml
output/reports/consolidado_final/: consolidado.csv
tests/: test_my_code.py
